--- a/TodoList/appsettings.json
+++ b/TodoList/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TodoListContext": "Server=(localdb)\\mssqllocaldb;Database=TodoListContext-c9f3d8e6-60d1-482f-9afb-e6367dda3670;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
